Mqtt publishing based on CosmosChangeFeed.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+# Azure Cosmos DB properties
+azure.cosmos.uri=Your_Cosmos_DB_URI
+azure.cosmos.key=Your_Cosmos_DB_Key
+azure.cosmos.database=Your_Database_Name
+azure.cosmos.container=Your_Container_Name
 
+# MQTT Broker properties
+mqtt.broker.url=tcp://Your_MQTT_Broker:Port
+mqtt.client.id=Your_Client_Id
+mqtt.topic=Your_Topic
