--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,23 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-stream-binder-kafka-streams'
 	implementation 'org.springframework.kafka:spring-kafka'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+
+
+	// https://mvnrepository.com/artifact/com.azure/azure-cosmos
+	implementation 'com.azure:azure-cosmos:4.55.1'
+
+
+	// https://mvnrepository.com/artifact/org.eclipse.paho/org.eclipse.paho.client.mqttv3
+	implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
+
+	// https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api
+	implementation 'javax.annotation:javax.annotation-api:1.3.2'
+
+
+
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+	// Test dependency
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
 	testImplementation 'org.springframework.cloud:spring-cloud-stream-test-binder'
