--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.2.2'
 	id 'io.spring.dependency-management' version '1.1.4'
+	id 'org.springframework.cloud.contract' version '4.1.1'
 }
 
 group = 'com.mqtt'
@@ -64,4 +65,8 @@ dependencyManagement {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+contracts {
+	baseClassForTests = 'com.mqtt.mqttspring.ContractTestBaseClass'
 }
