--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,10 @@ azure.cosmos.container=Your_Container_Name
 mqtt.broker.url=tcp://Your_MQTT_Broker:Port
 mqtt.client.id=Your_Client_Id
 mqtt.topic=Your_Topic
+
+#Spring properties
+spring.security.user.name=admin
+spring.security.user.password=admin
+spring.security.user.roles=Admin
+
+logging.level.root = DEBUG
